Finish supplementary information guide

--- a/3-text/furrow.html
+++ b/3-text/furrow.html
@@ -1494,14 +1494,14 @@
 </colgroup>
 <thead>
 <tr class="header">
-<th>Type</th>
+<th>Title</th>
 <th>Description</th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
 <td>Supplementary Figure 1</td>
-<td>Individual variability of ectopic folding in <em>btd</em> and <em>eve</em> mutants.</td>
+<td>Variability of ectopic folding in <em>btd</em> and <em>eve</em> mutants.</td>
 </tr>
 <tr class="even">
 <td>Supplementary Figure 2</td>
@@ -1513,11 +1513,11 @@
 </tr>
 <tr class="even">
 <td>Supplementary Figure 4</td>
-<td>Image processing pipeline for the tortuosity analysis in cauterized mutants.</td>
+<td>Image processing for tortuosity analysis.</td>
 </tr>
 <tr class="odd">
 <td>Supplementary Figure 5</td>
-<td>Image processing pipeline for the ablation analysis.</td>
+<td>Image processing for ablation analysis.</td>
 </tr>
 <tr class="even">
 <td>Supplementary Video 1</td>
@@ -1553,7 +1553,7 @@
 </tr>
 <tr class="even">
 <td>Supplementary Video 9</td>
-<td>Epithelial strain rate during ectopic folding in <em>btd</em> mutant.</td>
+<td>Strain rate during ectopic folding in <em>btd</em> mutant.</td>
 </tr>
 <tr class="odd">
 <td>Supplementary Video 10</td>
@@ -1589,35 +1589,35 @@
 </tr>
 <tr class="odd">
 <td>Supplementary Note 1</td>
-<td>Disruption of initiator cell behavior in cephalic furrow mutants</td>
+<td>Disruption of initiator cell behavior in mutants.</td>
 </tr>
 <tr class="even">
 <td>Supplementary Note 2</td>
-<td>Design of physical model and simulations</td>
+<td>Design of physical model and simulations.</td>
 </tr>
 <tr class="odd">
 <td>Supplementary Note 3</td>
-<td>Comparing our reference bending rigidity to direct measurements</td>
+<td>Comparison of reference bending rigidity to measurements.</td>
 </tr>
 <tr class="even">
 <td>Supplementary Note 4</td>
-<td>Live-imaging screen for cephalic furrow genes</td>
+<td>Live-imaging screen for cephalic furrow genes.</td>
 </tr>
 <tr class="odd">
 <td>Supplementary Note 5</td>
-<td>Role of <em>sloppy paired</em> in cephalic furrow patterning</td>
+<td>Role of <em>sloppy paired</em> in cephalic furrow formation.</td>
 </tr>
 <tr class="even">
 <td>Supplementary Note 6</td>
-<td>Genetic interactions at the head–trunk boundary</td>
+<td>Genetic interactions at the head–trunk boundary.</td>
 </tr>
 <tr class="odd">
 <td>Supplementary Note 7</td>
-<td>Role of tissue compression and cell divisions in buckling</td>
+<td>Role of tissue compression and cell divisions in buckling.</td>
 </tr>
 <tr class="even">
 <td>Supplementary Table 1</td>
-<td>Summary of live-imaging screening results for cephalic furrow genes.</td>
+<td>Results of live-imaging screen for cephalic furrow genes.</td>
 </tr>
 </tbody>
 </table>
@@ -1794,7 +1794,7 @@
 <p>To simulate the physical interactions between mitotic domains, germ band, and cephalic furrow, we defined the mitotic domains as compressed regions that tend to expand (they contain more particles compared to the surrounding regions) and the cephalic furrow as a narrow region having an intrinsic negative curvature predisposing the tissue to invaginate (Fig. <a href="#fig:fold-model">3</a>b). The germ band is defined by the position of the posterior end of the tissue (<math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mi>g</mi><annotation encoding="application/x-tex">g</annotation></semantics></math>), which is fixed at different fractions of egg length for each simulation (Fig. <a href="#fig:fold-model">3</a>a,b). Thus, the effect of germ band extension appears as a global compression in the blastoderm. To run the simulations, we defined a ground level of random noise and iterated towards equilibrium of the total energy in the system (see Methods). We then set several simulations with different bending rigidity values and combinations of presence/absence of mitotic domains, cephalic furrow, and percentages of germ band extension to quantify the position, frequency, and depth of ectopic folding in the epithelium.</p>
 <p>To characterize the model properties and energy dynamics, we ran simulations using initially a single bending rigidity value, without mitotic domains, and at different percentages of germ band extension. Without the germ band, the tissue is almost stress-free, and no ectopic folding occurs (Fig. <a href="#fig:fold-model">3</a>e). We begin to observe folds in the simulations with higher progression of germ band extension. Folding events are stochastic and happen at distinct iterations for each simulation. When a fold begins to form, the bending energy increases, releasing a larger amount of stretching energy, which, in turn, decreases the total energy of the system over each iteration (Fig. <a href="#fig:fold-model">3</a>d). The increase in bending energy coincides with a rapid deepening of the fold. Once the bending energy reaches a peak, we find that the fold continues to deepen more gradually, but the number of folds rarely changes afterward (Fig. <a href="#fig:fold-model">3</a>d, <a href="#fig:model-features">Extended Data Fig. 4</a>b). Therefore, this peak of bending energy provides an informative reference point, which we used to standardize the comparison across simulations.</p>
 <h2 id="supplementary-note-3">Supplementary Note 3</h2>
-<h3 id="comparing-our-reference-bending-rigidity-to-direct-measurements">Comparing our reference bending rigidity to direct measurements</h3>
+<h3 id="comparison-of-reference-bending-rigidity-to-direct-measurements">Comparison of reference bending rigidity to direct measurements</h3>
 <p>To compare the reference bending rigidity that we established for the <em>Drosophila</em> blastoderm based on our experimental data (<math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><msubsup><mi>K</mi><mi>b</mi><mtext mathvariant="normal">*</mtext></msubsup><mo>≈</mo><mn>1.0</mn><mo>×</mo><msup><mn>10</mn><mrow><mo>−</mo><mn>4</mn></mrow></msup></mrow><annotation encoding="application/x-tex">K_{b}^{\text{*}} \approx 1.0 \times 10^{−4}</annotation></semantics></math>) with direct measurements of the bending rigidity, we calculated the <math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><msubsup><mi>K</mi><mi>b</mi><mtext mathvariant="normal">*</mtext></msubsup><annotation encoding="application/x-tex">K_{b}^{\text{*}}</annotation></semantics></math> of 3D-cultured epithelial monolayers described in the literature. Trushko et al.<span class="citation" data-cites="Trushko2020-gf"><sup><a href="#ref-Trushko2020-gf" role="doc-biblioref">17</a></sup></span> reports that in a MDCK monolayer <math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><msub><mi>K</mi><mi>b</mi></msub><mo>=</mo><mn>5</mn><mo>×</mo><msup><mn>10</mn><mrow><mo>−</mo><mn>13</mn></mrow></msup><mi>N</mi><mi>m</mi></mrow><annotation encoding="application/x-tex">K_b = 5\times10^{-13} Nm</annotation></semantics></math> and <math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><msub><mi>K</mi><mi>s</mi></msub><mo>=</mo><mn>0.15</mn><mi>N</mi><msup><mi>m</mi><mrow><mo>−</mo><mn>1</mn></mrow></msup></mrow><annotation encoding="application/x-tex">K_s = 0.15 Nm^{-1}</annotation></semantics></math>. With these values, we can compute the dimensionless bending rigidity <math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><msubsup><mi>K</mi><mi>b</mi><mtext mathvariant="normal">*</mtext></msubsup><annotation encoding="application/x-tex">K_{b}^{\text{*}}</annotation></semantics></math>. However, the thickness of the MDCK monolayer (20 µm) and the <em>Drosophila</em> blastoderm (40 µm) are different, and hence we need to correct for this before computing <math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><msubsup><mi>K</mi><mi>b</mi><mtext mathvariant="normal">*</mtext></msubsup><annotation encoding="application/x-tex">K_{b}^{\text{*}}</annotation></semantics></math> for the MDCK monolayer. Given that, in elastic sheets, the bending rigidity scales with the square of the thickness of the tissue (<math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><msub><mi>K</mi><mi>b</mi></msub><mi>/</mi><msub><mi>K</mi><mi>s</mi></msub><mo>∝</mo><msup><mi>h</mi><mn>2</mn></msup></mrow><annotation encoding="application/x-tex">K_{b}/K_{s} \propto h^2</annotation></semantics></math>),<span class="citation" data-cites="Efrati2009-ve"><sup><a href="#ref-Efrati2009-ve" role="doc-biblioref">62</a></sup></span> we can compute the corrected <math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><msub><mi>K</mi><mi>b</mi></msub><annotation encoding="application/x-tex">K_b</annotation></semantics></math> as <math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><msubsup><mi>K</mi><mi>b</mi><mi>′</mi></msubsup><mo>=</mo><msubsup><mi>K</mi><mi>b</mi><mtext mathvariant="normal">*</mtext></msubsup><mo stretchy="false" form="prefix">(</mo><msub><mi>h</mi><mrow><mi>b</mi><mi>l</mi><mi>a</mi><mi>s</mi><mi>t</mi><mi>o</mi><mi>d</mi><mi>e</mi><mi>r</mi><mi>m</mi></mrow></msub><mi>/</mi><msub><mi>h</mi><mrow><mi>M</mi><mi>D</mi><mi>C</mi><mi>K</mi></mrow></msub><msup><mo stretchy="false" form="postfix">)</mo><mn>2</mn></msup></mrow><annotation encoding="application/x-tex">K_b^{&#39;} = K_{b}^{\text{*}}(h_{blastoderm}/h_{MDCK})^2</annotation></semantics></math>. This gives us <math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><msubsup><mi>K</mi><mi>b</mi><mi>′</mi></msubsup><mo>=</mo><mn>2</mn><mo>×</mo><msup><mn>10</mn><mrow><mo>−</mo><mn>12</mn></mrow></msup><mi>N</mi><mi>m</mi></mrow><annotation encoding="application/x-tex">K_b^{&#39;} =2\times10^{-12} Nm</annotation></semantics></math>. Now, we can calculate <math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><msubsup><mi>K</mi><mi>b</mi><mtext mathvariant="normal">*</mtext></msubsup><mo>=</mo><msubsup><mi>K</mi><mi>b</mi><mi>′</mi></msubsup><mi>/</mi><msub><mi>K</mi><mi>s</mi></msub><msup><mi>L</mi><mn>2</mn></msup></mrow><annotation encoding="application/x-tex">K_{b}^{\text{*}} = K_b^{&#39;}/K_s L^2</annotation></semantics></math> by adjusting <math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><msubsup><mi>K</mi><mi>b</mi><mi>′</mi></msubsup><mi>/</mi><msub><mi>K</mi><mi>s</mi></msub></mrow><annotation encoding="application/x-tex">K_b^{&#39;}/K_s</annotation></semantics></math> to the relevant length scale, the semi-major axis of the embryo. As the average <em>Drosophila</em> egg length is 510 µm,<span class="citation" data-cites="Markow2009-xc"><sup><a href="#ref-Markow2009-xc" role="doc-biblioref">63</a></sup></span> we used <math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mi>L</mi><mo>=</mo><mn>255</mn><mi>μ</mi><mi>m</mi></mrow><annotation encoding="application/x-tex">L = 255\mu m</annotation></semantics></math>. The final value we obtain is <math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><msubsup><mi>K</mi><mi>b</mi><mtext mathvariant="normal">*</mtext></msubsup><mo>=</mo><mn>2.05</mn><mo>×</mo><msup><mn>10</mn><mrow><mo>−</mo><mn>4</mn></mrow></msup></mrow><annotation encoding="application/x-tex">K_{b}^{\text{*}} = 2.05\times 10^{-4}</annotation></semantics></math>. This is the estimated <math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><msubsup><mi>K</mi><mi>b</mi><mtext mathvariant="normal">*</mtext></msubsup><annotation encoding="application/x-tex">K_{b}^{\text{*}}</annotation></semantics></math> for the MDCK monolayer with the same thickness (height-corrected) and geometrical conditions (length-corrected) as the <em>Drosophila</em> blastoderm.</p>
 <h2 id="supplementary-note-4">Supplementary Note 4</h2>
 <h3 id="live-imaging-screen-for-cephalic-furrow-genes">Live-imaging screen for cephalic furrow genes</h3>
@@ -1804,7 +1804,7 @@
 <!--TODO: Add figure with screen results-->
 <p>To uncover other genes directly involved in cephalic furrow formation in addition to <em>btd</em>, <em>eve</em>, and <em>prd</em>, we performed a live-imaging screen in strains containing loss-of-function alleles for a selection of candidate genes expressed at the head–trunk region.<span class="citation" data-cites="Tomancak2002-yf Tomancak2007-db Lecuyer2007-uy"><sup><a href="#ref-Tomancak2002-yf" role="doc-biblioref">64</a>–<a href="#ref-Lecuyer2007-uy" role="doc-biblioref">66</a></sup></span> Because the cephalic furrow is transient and leaves no trace, the live-imaging approach is critical to recognize altered phenotypes. From about 50 genes, we only detected three showing abnormal cephalic furrow formation to different degrees besides the previously described genes (see <a href="#tbl:screen">Supplementary Table 1</a>). The strongest cephalic furrow phenotype was present in flies mutant for the <em>sloppy paired</em> (<em>slp</em>) genes.</p>
 <h2 id="supplementary-note-5">Supplementary Note 5</h2>
-<h3 id="role-of-sloppy-paired-in-cephalic-furrow-patterning">Role of <em>sloppy paired</em> in cephalic furrow patterning</h3>
+<h3 id="role-of-sloppy-paired-in-cephalic-furrow-formation">Role of <em>sloppy paired</em> in cephalic furrow formation</h3>
 <p>To identify other cephalic furrow genes, we performed a live-imaging screen using loss-of-function alleles of several candidates expressed at the head–trunk interface (Supplementary Note 4). We found that null mutants for the <em>sloppy paired</em> (<em>slp</em>) transcription factors, <em>slp1</em> and <em>slp2</em>, show a strong phenotype where the cephalic furrow is delayed and shifted towards the anterior end by ~6% of the egg length (control=67.6±1.4%, n=26; <em>slp</em>=73.2±0.7%, n=7) (<a href="#fig:slp-analyses">Extended Data Fig. 5</a>a,b, <a href="#fig:vid-slp-lateral">Supplementary Video 17</a>). With this anterior shift, <em>slp</em> mutants exhibit a more prominent posterior dorsal fold and an early ectopic fold within MD6 appearing before cell divisions (<a href="#fig:slp-analyses">Extended Data Fig. 5</a>a, <a href="#fig:vid-slp-lateral">Supplementary Video 17</a>). These observations are congruent with the increase in posterior mechanical instability present in our simulations where the cephalic furrow is shifted forward (Fig. <a href="#fig:fold-model">3</a>h).</p>
 <p>Since <em>slp1</em> is a known anterior repressor that positions anterior pair-rule stripes,<span class="citation" data-cites="Andrioli2004-qi Andrioli2012-fv"><sup><a href="#ref-Andrioli2012-fv" role="doc-biblioref">18</a>,<a href="#ref-Andrioli2004-qi" role="doc-biblioref">67</a></sup></span> we wondered if the shift in the position of the cephalic furrow in <em>slp</em> mutants coincided with a shift in typical overlap between <em>btd</em> and <em>eve</em> stripe 1 at the head–trunk boundary. We find that the expression patterns and typical overlap between the two genes remain almost unaltered, except for the small ectopic expression of <em>btd</em> in the head and for the wider gap between <em>eve</em> stripes 1 and 2 (<a href="#fig:slp-analyses">Extended Data Fig. 5</a>c–e). The anterior shift in cells expressing <em>btd</em> and <em>eve</em> corresponds to a few rows of blastoderm cells (control=4.7±0.5 rows, n=4; <em>slp</em>=7.3±0.7 rows, n=5) (<a href="#fig:slp-analyses">Extended Data Fig. 5</a>f). Despite the displacement, most <em>slp</em> embryos exhibit initiator cell behaviors, suggesting that the patterning is not entirely perturbed (<a href="#fig:slp-analyses">Extended Data Fig. 5</a>g). However, the symmetry of the resulting fold is altered (<a href="#fig:slp-analyses">Extended Data Fig. 5</a>h), indicating that <em>slp1</em> may contribute not only to the positioning but also to the patterning of individual cells that give rise to the cephalic furrow.</p>
 <h2 id="supplementary-note-6">Supplementary Note 6</h2>
@@ -1817,7 +1817,7 @@
 <h2 id="supplementary-table-1">Supplementary Table 1</h2>
 <div id="tbl:screen" class="tablenos">
 <table id="tbl:screen" data-tag="Supplementary Table 1">
-<caption><span>Table Supplementary Table 1:</span> Summary of live-imaging screening results for cephalic furrow genes. </caption>
+<caption><span>Table Supplementary Table 1:</span> Summary of the results of the live-imaging screen for cephalic furrow genes. </caption>
 <colgroup>
 <col style="width: 20%" />
 <col style="width: 25%" />
